--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           <!-- CHANGE TO YOUR OWN PHOTO AND ID -->
           <img src="images/project-puppy.jpg" alt="" class="picture" id="YOURNAME">
           <h2 class="name">Your Name</h2>
-          <h3 class="project-name">GITHUB FOR DOGS</h3>
+          <h3 class="project-name">GITHUB FOR CATS</h3>
           <p class="project-description">
             Tell us what you'll be working on in 140 characters or less!
           </p>
